tests/expectations/compiler/mappings/no_import_external_read_fail.out
Error [ETYC0372005]: Unknown variable `registry.aleo/users`
    --> compiler-test:10:31
     |
  10 |     let a:bool = Mapping::get(registry.aleo/users, addr);
     |                               ^^^^^^^^^^^^^^^^^^^
